objects/IS_System_Modification__c.object
<CustomObject>
    <fields>
        <fullName>Type_of_Modification__c</fullName>
        <label>Type of Modification</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Original_Steps_Redeploy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to unlock the main description fields (tracked by field history).  This also resets the deployment status and manual steps fields.</inlineHelpText>
        <label>Update Original Steps &amp; Redeploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updates_After_Initial_Deploy__c</fullName>
        <inlineHelpText>Note any changes made to this Mod after the initial deployment from Dev to another environment</inlineHelpText>
        <label>Updates After Initial Deploy</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <label>IS System Modification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Deployment_Date_Actual__c</columns>
        <columns>Deployment_Path__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_NonDeployed</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Deployment_Date_Actual__c</columns>
        <columns>Deployment_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deployment_Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed</value>
        </filters>
        <label>All Non-Deployed</label>
    </listViews>
    <listViews>
        <fullName>All_with_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Deployment_Date_Actual__c</columns>
        <columns>Deployment_Path__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Record Type</label>
    </listViews>
    <listViews>
        <fullName>CR_Pre_Deployment_Steps</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>API_Name__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Component__c</columns>
        <columns>Custom_Object__c</columns>
        <columns>Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request__c</field>
            <operation>contains</operation>
            <value>9340</value>
        </filters>
        <filters>
            <field>Pre_deployment_step__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CR Pre-Deployment Steps</label>
    </listViews>
    <listViews>
        <fullName>Deployed_Last_3_Months</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Deployment_Date_Actual__c</columns>
        <columns>Deployment_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deployment_Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>Deployment_Date_Actual__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Deployed Last 3 Months</label>
    </listViews>
    <listViews>
        <fullName>IS_Mods_Change_Request_9762_Q2C</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Parent_Object__c</columns>
        <columns>Object_Label__c</columns>
        <columns>Deployment_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request__c</field>
            <operation>contains</operation>
            <value>9762</value>
        </filters>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Custom Field,Tab</value>
        </filters>
        <label>IS Mods - Change Request 9762 (Q2C)</label>
    </listViews>
    <listViews>
        <fullName>IS_Mods_Change_Request_x</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Deployment_Date_Actual__c</columns>
        <columns>Deployment_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request__c</field>
            <operation>equals</operation>
            <value>x</value>
        </filters>
        <label>IS Mods - Change Request x</label>
    </listViews>
    <listViews>
        <fullName>IS_Mods_Release_x</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Deployment_Date_Actual__c</columns>
        <columns>Deployment_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>x</value>
        </filters>
        <label>IS Mods - Release x</label>
    </listViews>
    <listViews>
        <fullName>Manual_Steps_Release_49</fullName>
        <columns>NAME</columns>
        <columns>Change_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Manual_Setup_Complete_in_Test__c</columns>
        <columns>Manual_Setup_Complete_in_Production__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Setup_Complete_in_Production__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Manual_Setup_Complete_in_Test__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manual Steps - Release 49</label>
    </listViews>
    <listViews>
        <fullName>Pre_Deployment_Steps_for_Release_49</fullName>
        <columns>Change_Request__c</columns>
        <columns>NAME</columns>
        <columns>CR_Status__c</columns>
        <columns>Manual_Setup_Complete_in_Production__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 49: March 2016</value>
        </filters>
        <filters>
            <field>Pre_deployment_step__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pre Deployment Steps for Release 49</label>
    </listViews>
    <listViews>
        <fullName>Release_39_Dec_2014</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Change_Request__c</columns>
        <columns>NAME</columns>
        <columns>Type_of_Modification__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Label__c</columns>
        <columns>Parent_Object__c</columns>
        <columns>Object_Type__c</columns>
        <columns>CR_Status__c</columns>
        <columns>Component__c</columns>
        <columns>Delete_from_Design__c</columns>
        <columns>Custom_Object__c</columns>
        <columns>Dependency_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 50: May 2016</value>
        </filters>
        <filters>
            <field>CR_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Delete_from_Design__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Change_Request__c</field>
            <operation>notEqual</operation>
            <value>CR-20160223-9624</value>
        </filters>
        <filters>
            <field>Type_of_Modification__c</field>
            <operation>equals</operation>
            <value>,New,Add</value>
        </filters>
        <label>Release 50: May 2016</label>
    </listViews>
    <nameField>
        <displayFormat>SFMOD-{YY}{MM}-{0}</displayFormat>
        <label>SFDC Modification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IS System Modifications</pluralLabel>
    <recordTypes>
        <fullName>App_Specific</fullName>
        <active>true</active>
        <description>Used for non-Salesforce components, such as for Workday or JobScience</description>
        <label>App Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coding</fullName>
        <active>false</active>
        <label>z1Coding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complex</fullName>
        <active>true</active>
        <description>A change that involves manual steps, double deployments, High Impact mods, managed package mods, etc</description>
        <label>Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Config</fullName>
        <active>false</active>
        <label>z1Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deployed</fullName>
        <active>true</active>
        <description>A change that has been deployed to the production environment and is now read-only</description>
        <label>Deployed</label>
    </recordTypes>
    <recordTypes>
        <fullName>NON_SFDC_Application_Code_Logic</fullName>
        <active>false</active>
        <label>z1Non-SFDC Application Code/Logic</label>
    </recordTypes>
    <recordTypes>
        <fullName>NON_SFDC_Configuration</fullName>
        <active>false</active>
        <label>z1Non-SFDC Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>NON_SFDC_Database</fullName>
        <active>false</active>
        <label>z1Non-SFDC Database</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <description>A change that uses an automated deployment method, with no additional steps</description>
        <label>Simple</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Custom_Object_Name</fullName>
        <active>false</active>
        <description>Custom Object must be filled in when object=custom object</description>
        <errorConditionFormula>AND(
ISPICKVAL( Object__c , &quot;Custom Object&quot;) ,
 ISBLANK( Custom_Object__c ) 
)</errorConditionFormula>
        <errorDisplayField>Custom_Object__c</errorDisplayField>
        <errorMessage>Please fill in the name of the Custom Object being modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deployed_Rec_Type_must_include_Prod</fullName>
        <active>true</active>
        <description>If a record is set to the Deployed record type, the Deployed To field must include Production</description>
        <errorConditionFormula>AND(RecordType.Name=&apos;Deployed&apos;,NOT(INCLUDES(Deployed_To__c,&apos;Production&apos;)))</errorConditionFormula>
        <errorDisplayField>Deployed_To__c</errorDisplayField>
        <errorMessage>&apos;Production&apos; must be included in Deployed To for the Deployed record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deployed_To_Prod_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>If the Deployed To field includes Production, it cannot be changed to not include Production unless the Delete from Design field is also checked</description>
        <errorConditionFormula>AND(INCLUDES(PRIORVALUE(Deployed_To__c),&apos;Production&apos;),NOT(INCLUDES(Deployed_To__c,&apos;Production&apos;)),Delete_from_Design__c=FALSE)</errorConditionFormula>
        <errorDisplayField>Deployed_To__c</errorDisplayField>
        <errorMessage>&apos;Production&apos; cannot be removed from the Deployed To field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deployed_To_Sandbox</fullName>
        <active>true</active>
        <description>Verify the listed sandbox type is included on the release</description>
        <errorConditionFormula>OR(
AND(
  INCLUDES(Deployed_To__c,&apos;Dev&apos;),
  ISBLANK(Change_Request__r.Release__r.Dev_Sandbox__c)),
AND(
  INCLUDES(Deployed_To__c,&apos;QA&apos;),
  ISBLANK(Change_Request__r.Release__r.QA_Sandbox__c)),
AND(
  INCLUDES(Deployed_To__c,&apos;UAT&apos;),
  ISBLANK(Change_Request__r.Release__r.UAT_Sandbox__c)),
AND(
  INCLUDES(Deployed_To__c,&apos;Rehearse&apos;),
  ISBLANK(Change_Request__r.Release__r.Rehearse_Sandbox__c)),
AND(
  INCLUDES(Deployed_To__c,&apos;Alternate&apos;),
  ISBLANK(Change_Request__r.Release__r.Alternate_Sandbox__c))
)</errorConditionFormula>
        <errorDisplayField>Deployed_To__c</errorDisplayField>
        <errorMessage>Invalid sandbox type included.  One of the selected &apos;Deployed To&apos; sandboxes has not been defined on the related Release record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deployment_Planning_Notes_required</fullName>
        <active>true</active>
        <description>If Double-Deployment is TRUE, then require a value in Deployment Planning Notes</description>
        <errorConditionFormula>AND(
Double_Deployment__c = TRUE,
ISBLANK(Deployment_Planning_Notes__c)
)</errorConditionFormula>
        <errorDisplayField>Deployment_Planning_Notes__c</errorDisplayField>
        <errorMessage>Please enter a value in the Deployment Planning Notes field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>High_Impact_Mod_Type_required</fullName>
        <active>true</active>
        <description>If High Impact Mod is TRUE, High Impact Mod Type must have a value</description>
        <errorConditionFormula>AND(
High_Impact_Mod__c = TRUE,
ISBLANK(TEXT(High_Impact_Mod_Type__c))
)</errorConditionFormula>
        <errorDisplayField>High_Impact_Mod_Type__c</errorDisplayField>
        <errorMessage>Please select a value for High Impact Mod Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mods_cannot_be_added_or_removed</fullName>
        <active>true</active>
        <description>Do not allow modifications to be added or removed from Change Requests with Status = 12-Released.</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Change_Request__r.Status__c, &quot;12-Deployed&quot;),
  OR(
    ISNEW(),
    ISCHANGED( Change_Request__c )
  )
)</errorConditionFormula>
        <errorMessage>Modifications cannot be added or removed from a deployed Change Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Simple_Mods_must_be_in_Change_Set</fullName>
        <active>true</active>
        <description>This ensures that users cannot change &quot;Include in Change Set&quot; to False on Simple Mods, since those mods cannot have CR Action Items associated with them for manual steps.</description>
        <errorConditionFormula>AND( 
RecordType.Name = &apos;Simple&apos;, 
Include_in_Change_Set__c = False 
)</errorConditionFormula>
        <errorDisplayField>Include_in_Change_Set__c</errorDisplayField>
        <errorMessage>If the Modification is Simple, then it should be included in the Change Set. Please modify the record type if you need to add CR Action Items for manual steps.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ValidateComponentName</fullName>
        <active>true</active>
        <description>API Name or Label must be populated to create or edit the record.</description>
        <errorConditionFormula>AND (
ISBLANK(Label__c),
ISBLANK(API_Name__c),
OR (
RecordType.DeveloperName = &apos;Coding&apos;,
RecordType.DeveloperName = &apos;Config&apos;
)
)</errorConditionFormula>
        <errorDisplayField>Label__c</errorDisplayField>
        <errorMessage>API Name or Label must be populated to create or edit the record.</errorMessage>
    </validationRules>
</CustomObject>